--- a/sass/_screen.scss
+++ b/sass/_screen.scss
@@ -1,168 +1,9 @@
-@font-face {
-	font-family: "Eagle";
-	src: url("https://frindestown.duckdns.org/fonts/Web437_EagleSpCGA_Alt3.woff")
-		format("woff");
-}
-@font-face {
-	font-family: "WebPlus";
-	src: url("https://frindestown.duckdns.org/fonts/WebPlus_IBM_VGA_8x16.woff")
-		format("woff");
-}
-
-* {
-	box-sizing: border-box;
-}
-
-body {
-	overflow-y: hidden;
-	font-family: "WebPlus_IBM_VGA_8x16", Inconsolata, monospace;
-	color: #009900;
-}
-
-// Make it cover the entire screen without being interactible.
-
-article>.container {
-	width: 100%;
-	height: 100vh;
-	margin: 0 auto;
-	// Set base background color so see-through parts are just more black.
-	background-color: black;
-	background-image: radial-gradient(
-		200% 250% at center,
-		rgba(0, 50, 50, 0.75),
-		black 100%
-	);
-	color: #009900;
-	overflow-y: scroll;
-	padding: 2rem 60px;
-
-	font-family: "WebPlus", Inconsolata, monospace;
-	font-size: 24px;
-	text-shadow: 0 0 5px #707070;
-	animation: textShadow 0.15s infinite;
-}
-.content {
-	background-size: 100% 100%;
-
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cstyle%3E .screen %7B fill: url(%23radial-gradient); %7D .screen, .outer, .inner %7B stroke-width: 0px; %7D .outer %7B fill: %23e0ded4; %7D .inner %7B fill: %23d5d0bd; %7D %3C/style%3E%3CradialGradient id='radial-gradient' cx='623.96' cy='375.39' fx='795.96' fy='625.84' r='818.74' gradientTransform='translate(-2.5 145.27) rotate(-.61) scale(1 .63)' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='.39' stop-color='%23fff' stop-opacity='0'/%3E%3Cstop offset='.49' stop-color='%23fff' stop-opacity='0'/%3E%3Cstop offset='.69' stop-color='%23b6b9c0' stop-opacity='.37'/%3E%3Cstop offset='1' stop-color='%23394253'/%3E%3C/radialGradient%3E%3C/defs%3E%3Cg id='Layer_1-2' data-name='Layer 1'%3E%3Cg%3E%3Cpath class='outer' d='m0,0v750.78h1247.92V0H0Zm1207.16,715.39c-11.58,16.36-1141.76,20.13-1165.26.68-15.22-12.59-18.75-659.5-.14-680.75,17.08-19.5,1152.19-15.77,1165.26,1.08,15.62,20.14,15.89,656.74.14,678.99Z'/%3E%3Cg%3E%3Cpath class='screen' d='m575.98,735.91c-141.19,0-270.37-1.12-363.74-3.15-165.15-3.59-171.21-8.61-174.83-11.6-3.04-2.52-5.22-6.44-7.65-36.78-5.06-63.15-8.19-214.35-7.61-367.69.29-76.15,1.48-142.32,3.45-191.36,3.47-86.47,8.11-91.76,10.88-94.92,2.48-2.83,4.83-5.51,53.04-8.27,27.99-1.61,67.87-2.99,118.52-4.1,92.44-2.04,220.76-3.16,361.32-3.16,155.98,0,313,1.37,430.81,3.75,62.71,1.27,112.35,2.78,147.53,4.48,60.35,2.92,62.33,5.48,64.84,8.71,2.43,3.13,6.94,8.95,10.29,115.53,1.92,60.92,2.98,141.7,3.01,227.46.03,85.85-1,166.77-2.88,227.86-3.29,106.86-7.9,113.35-10.11,116.48-2.24,3.16-5.65,4.47-21.46,6.01-9.85.96-24.12,1.89-42.42,2.76-34.69,1.65-83.71,3.12-145.69,4.35-116.73,2.32-272.47,3.66-427.28,3.66Z'/%3E%3Cpath class='inner' d='m569.36,21.87c305.21,0,630.68,5.25,637.64,14.23,15.62,20.14,15.89,656.74.14,678.99-6.15,8.68-327.49,13.82-631.15,13.82-268.46,0-523.09-4.01-534.12-13.14-15.22-12.59-18.75-659.5-.14-680.75,7.98-9.11,260.03-13.15,527.62-13.15m.06-14v14l-.03-14c-140.65,0-269.02,1.12-361.51,3.16-50.74,1.12-90.7,2.5-118.77,4.11-14.98.86-26.78,1.8-35.06,2.79-12.09,1.45-18.59,3-22.85,7.86-3.93,4.49-6.36,11.23-8.73,35.65-1.49,15.37-2.8,36.77-3.87,63.6-1.97,49.12-3.17,115.38-3.45,191.61-.58,153.52,2.56,304.96,7.64,368.28.81,10.1,1.64,17.8,2.55,23.54,1.35,8.58,3.03,14.29,7.61,18.08,3.96,3.28,9.41,4.81,22.43,6.31,8.62.99,20.75,1.93,36.07,2.79,28.72,1.61,69.31,2.99,120.64,4.11,93.42,2.03,222.66,3.15,363.9,3.15,154.86,0,310.65-1.33,427.42-3.66,62.05-1.24,111.13-2.7,145.89-4.36,18.41-.88,32.8-1.81,42.77-2.79,15.07-1.47,22.13-2.76,26.5-8.93,2.89-4.08,5.29-9.74,7.69-41.78,1.44-19.12,2.68-45.54,3.7-78.53,1.89-61.15,2.91-142.15,2.88-228.08-.03-85.83-1.1-166.69-3.01-227.68-1.03-32.84-2.29-59.1-3.72-78.04-2.44-32.11-4.87-37.48-8.04-41.57-4.25-5.48-10.36-6.94-26.57-8.54-10.15-1-24.78-1.97-43.46-2.87-35.24-1.71-84.93-3.22-147.71-4.49-117.84-2.38-274.9-3.75-430.9-3.75h0Z'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
-
-h1,
-h2 {
-	font-family: "Eagle", Inconsolata, monospace;
-	font-weight: normal;
-	text-align: center;
-	font-size: 1.2em;
-}
-
-::selection {
-	color: #00f0f0;
-	background: #008008;
-	// Overwrites the animation and default text-shadow
-	text-shadow: none;
-}
-
-@keyframes textShadow {
-	0% {
-		text-shadow: 0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5),
-			-0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	5% {
-		text-shadow: 2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5),
-			-2.7928974010788217px 0 2px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	10% {
-		text-shadow: 0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5),
-			-0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	15% {
-		text-shadow: 0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5),
-			-0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	20% {
-		text-shadow: 3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5),
-			-3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	25% {
-		text-shadow: 1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5),
-			-1.6125630401149584px 0 2px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	30% {
-		text-shadow: 0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5),
-			-0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	35% {
-		text-shadow: 3.896914047650351px 0 1px rgba(0, 30, 255, 0.5),
-			-3.896914047650351px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	40% {
-		text-shadow: 3.870905614848819px 0 1px rgba(0, 30, 255, 0.5),
-			-3.870905614848819px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	45% {
-		text-shadow: 2.231056963361899px 0 1px rgba(0, 30, 255, 0.5),
-			-2.231056963361899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	50% {
-		text-shadow: 0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5),
-			-0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	55% {
-		text-shadow: 2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5),
-			-2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	60% {
-		text-shadow: 2.202193051050636px 0 1px rgba(0, 30, 255, 0.5),
-			-2.202193051050636px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	65% {
-		text-shadow: 2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5),
-			-2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	70% {
-		text-shadow: 0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5),
-			-0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	75% {
-		text-shadow: 1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5),
-			-1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	80% {
-		text-shadow: 0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5),
-			-0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	85% {
-		text-shadow: 0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5),
-			-0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	90% {
-		text-shadow: 3.443339761481782px 0 1px rgba(0, 30, 255, 0.5),
-			-3.443339761481782px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	95% {
-		text-shadow: 2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5),
-			-2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	100% {
-		text-shadow: 2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5),
-			-2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
+html {
+    scroll-snap-type: x proximity;
 }
 
 // Scrollbar
 ::-webkit-scrollbar {
-	width: 20px;
-}
-
-::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px #009900;
-}
-
-::-webkit-scrollbar-thumb {
-	background: #008000;
-	height: 10px;
-
-	&:hover {
-		background: #009900;
-	}
+	width: 0px;
+	height: 0px;
 }
