--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,354 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Silkscreen&display=swap');
 $monitor-height: 100vh;
-$monitor-width: min(100vw, $monitor-height * 1.33);
+$monitor-width: min(100vw, 133vh);
 $monitor-content-padding: max(4%, 20px);
 $section-width: 100vw;
 $text-color: #009900;
 
-:root {
-	--step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
-	--step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
-	--step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
-	--step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
-	--step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
-	--step-3: clamp(1.9438rem, 1.7707rem + 0.8652vw, 2.4413rem);
-	--step-4: clamp(2.3325rem, 2.0823rem + 1.2511vw, 3.0519rem);
-	--step-5: clamp(2.7994rem, 2.4461rem + 1.7663vw, 3.815rem);
-}
-html{
-
-	overflow-y: clip;
-}
-* {
-	box-sizing: border-box;
-}
-
-html {
-	scroll-behavior: smooth;
-	scroll-snap-type: x proximity;
-	overflow-y: hidden;
-
-}
-
-body {
-	font-family: '', sans-serif;
-	color: $text-color;
-	overflow-x: scroll;
-	margin: 0;
-	background-color:#101313;
-}
-
-section,
-header > div,
-main footer,
-aside > div,
-body > footer > div {
-	scroll-snap-align: center;
-	height: $monitor-height;
-	width: $monitor-width;
-	margin: 0 auto;
-	overflow-x: hidden;
-
-	// Set base background color so see-through parts are just more black.
-	background-color: black;
-	background-image: radial-gradient(
-		200% 250% at center,
-		rgba(0, 50, 50, 0.75),
-		black 100%
-	);
-
-	// Make it cover the entire screen without being interactible.
-	&::before {
-		content: "";
-		display: block;
-		pointer-events: none;
-		z-index: 10;
-		position: sticky;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		height: $monitor-height;
-		width: $monitor-width;
-		background-size: 100% 100%;
-		background-image: url("https://github.com/Chafalleiro/retromator/blob/main/img/crt_green_mask.png?raw=true");
-		background-repeat: no-repeat;
-	}
-
-	&::after {
-		// Green scan bar.
-		content: "";
-		display: block;
-		margin: 0 auto;
-		width: $monitor-width;
-		height: 100px;
-		background: linear-gradient(
-			0deg,
-			rgba(0, 0, 0, 0) 0%,
-			rgba(0, 153, 0, 0.15) 50%,
-			rgba(0, 0, 0, 0) 100%
-		);
-
-		position: absolute;
-		top: 0;
-
-		pointer-events: none;
-		z-index: 9;
-
-		animation: bar 18s infinite;
-		animation-timing-function: linear;
-	}
-
-	> p,
-	> a {
-		padding: 0 $monitor-content-padding;
-	}
-
-	> h1,
-	> h2,
-	> h3,
-	> h4 {
-		padding: 10px $monitor-content-padding;
-	}
-
-	> :first-child {
-		margin-top: -96vh;
-	}
-
-	> :last-child {
-		padding-bottom: 30px;
-	}
-}
-
-h1,
-h2,
-h3,
-h4 {
-	font-family: 'Press Start 2P', sans-serif;
-	color: $text-color;
-	font-weight: normal;
-	text-align: center;
-	padding-top: 15px;
-	text-shadow: 0 0 5px #707070;
-	animation: textShadow 0.15s infinite;
-}
-
-::selection {
-	color: #00f0f0;
-	background: #008008;
-	// Overwrites the animation and default text-shadow
-	text-shadow: none;
-}
-
-@keyframes bar {
-	0% {
-		top: -300%;
-	}
-	100% {
-		top: 100%;
-	}
-}
-
-@keyframes textShadow {
-	0% {
-		text-shadow: 0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5),
-			-0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	5% {
-		text-shadow: 2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5),
-			-2.7928974010788217px 0 2px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	10% {
-		text-shadow: 0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5),
-			-0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	15% {
-		text-shadow: 0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5),
-			-0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	20% {
-		text-shadow: 3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5),
-			-3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	25% {
-		text-shadow: 1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5),
-			-1.6125630401149584px 0 2px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	30% {
-		text-shadow: 0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5),
-			-0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	35% {
-		text-shadow: 3.896914047650351px 0 1px rgba(0, 30, 255, 0.5),
-			-3.896914047650351px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	40% {
-		text-shadow: 3.870905614848819px 0 1px rgba(0, 30, 255, 0.5),
-			-3.870905614848819px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	45% {
-		text-shadow: 2.231056963361899px 0 1px rgba(0, 30, 255, 0.5),
-			-2.231056963361899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	50% {
-		text-shadow: 0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5),
-			-0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	55% {
-		text-shadow: 2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5),
-			-2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	60% {
-		text-shadow: 2.202193051050636px 0 1px rgba(0, 30, 255, 0.5),
-			-2.202193051050636px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	65% {
-		text-shadow: 2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5),
-			-2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	70% {
-		text-shadow: 0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5),
-			-0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	75% {
-		text-shadow: 1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5),
-			-1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	80% {
-		text-shadow: 0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5),
-			-0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	85% {
-		text-shadow: 0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5),
-			-0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	90% {
-		text-shadow: 3.443339761481782px 0 1px rgba(0, 30, 255, 0.5),
-			-3.443339761481782px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	95% {
-		text-shadow: 2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5),
-			-2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-	100% {
-		text-shadow: 2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5),
-			-2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
-	}
-}
-
-// Scrollbar
-::-webkit-scrollbar {
-	width: 0px;
-	height: 0px;
-}
-
-nav {
-   display: none;
-}
-
-// Fix github link
-div > .link-github {
-	padding: 0 $monitor-content-padding;
-}
-
-svg {
-	height: 1em;
-
-	path {
-		fill: $text-color;
-	}
-}
-
-ul,
-ol {
-	padding-inline-start: calc($monitor-content-padding + 40px);
-}
-
-p,
-a,
-li {
-	font-size: var(--step-0);
-	text-shadow: 0 0 5px #707070;
-	animation: textShadow 0.15s infinite;
-}
-
-h1 {
-	font-size: var(--step-4);
-}
-
-h2 {
-	font-size: var(--step-3);
-}
-
-h3 {
-	font-size: var(--step-2);
-}
-
-h4 {
-	font-size: var(--step-1);
-}
-
-a {
-	color: #00ffc0;
-}
-
-main footer a {
-	display: block;
-	padding-left: $monitor-content-padding;
-	padding-top: 7px;
-}
-
-// Set up each monitor
-body,
-main,
-main > .container,
-article {
-	display: flex;
-	overflow-x: scroll;
-	width: fit-content;
-}
-
-body,
-header,
-#about,
-#guidelines,
-#contribute {
-	display: grid;
-	grid-template-rows: 100vh;
-}
-
-body {
-	grid-template-columns: $section-width ($section-width * 6) repeat(3, $section-width);
-}
-
-header {
-	grid-template-columns: $section-width;
-}
-
-#about {
-	grid-template-columns: repeat(2, $section-width);
-}
-
-#guidelines {
-	grid-template-columns: $section-width;
-}
-
-#contribute {
-	grid-template-columns: repeat(3, $section-width);
-}
-
-.skip-link {
-	display: block;
-	position: fixed;
-	top: -1000px;
-	left: 0;
-	z-index: 15;
-	width: fit-content;
-	padding: 0.8em;
-	background-color: #122418;
-	text-decoration: none;
-}
-
-.skip-link:focus {
-	top: 0;
-}
+@import "fonts";
+@import "reset";
+@import "typography";
+@import "layout";
+@import "general";
+@import "screen";
+@import "monitor";
+@import "nav";
+@import "links";
